force-app/main/default/objects/Flight_passenger__c/Flight_passenger__c.object-meta.xml
<CustomObject>
    <label>Flight passenger</label>
    <nameField>
        <displayFormat>FP-{000}</displayFormat>
        <label>Flight passenger</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight passengers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>