force-app/main/default/objects/Flight_passenger__c/fields/DateOfDeparture__c.field-meta.xml
<CustomField>
    <fullName>DateOfDeparture__c</fullName>
    <label>DateOfDeparture</label>
    <type>Date</type>
</CustomField>