force-app/main/default/objects/Flight_passenger__c/fields/Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passenger</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Flight passengers</relationshipLabel>
    <relationshipName>Flight_passengers</relationshipName>
    <type>Lookup</type>
</CustomField>