force-app/main/default/objects/Flight_passenger__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First class</fullName>
            </value>
            <value>
                <fullName>Business class</fullName>
            </value>
            <value>
                <fullName>Economy class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>